# radt

./: .gitignore  README.md  clean_mlflow_envs.sh  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  radt.py
backend/: .gitignore  README.md  environment.sh  mps_script.sh  run.py  run_csv.py
backend/benchmark/: argparser.py  mldgpu.py  model.py  modelrunner.py
backend/nsight_results/: upload_artifacts.py
environments/: mxnet.yaml  pytorch.yaml  tensorflow.yaml
examples/: readme.md
examples/csv/: experiment_collocation.csv  experiment_double.csv  experiment_live.csv
examples/mxnet/: readme.md
examples/pytorch/: cifar10.py  conda.yaml  demo_cifar10_mig.csv  experiment_folder.csv
frontend/: .env  README.md  package-lock.json  package.json
frontend/src/: api.js
queries/: fe_experiments.sql  fe_metrics.sql  fe_metrics_available.sql  fe_runs.sql
radt/: README.md  pyproject.toml  radt.py
radt/radt/: __init__.py  __main__.py  constants.py  radt.py
radt/radt/run/: __init__.py  benchmark.py  run.py
radt/radt/run/listeners/: dcgmi_listener.py  iostat_listener.py  smi_listener.py
radt/radt/schedule/: __init__.py  schedule.py
radtrun/: README.md  pyproject.toml
radtrun/radtrun/: __init__.py  __main__.py  mldgpu.py  radtrun.py
src/: App.js  api.js  index.css  index.js  utils.js
src/components/: App.js  Chart.js  ChartPicker.js  ChartTester.js  DataPicker.js  Dropdown.js  Experiments.js  HTTP.js  LocalDataTest.js  Runs.js  Selections.js  Workloads.js
src/data/: test_12f6a.json
src/styles/: App.css  Chart.css  (+9 more)
(+25 files in other folders)
