[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "radt"
authors = [{name = "Ties Robroek", email = "titr@itu.dk"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "mlflow >=2.4.0",
    "pandas >=2.0.0",
    "migedit >= 0.2.0",
    "boto3 >= 1.25.0"
]

[project.urls]
Home = "https://github.com/Resource-Aware-Data-systems-RAD/radt"

[project.scripts]
radt = "radt:cli"
